Adicionar imagem WhatsApp ao site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt">
+<!DOCTYPE html>
+<html lang="pt-PT">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Cleusia Brito - Início</title>
+    <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Início</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h1>Bem-vinda ao site de Cleusia Brito</h1>
+            <p>Profissional dedicada a oferecer soluções inovadoras com qualidade e eficiência.</p>
+            <a href="contactos.html" class="btn-primary">Fale Connosco</a>
+        </section>
+
+        <section class="about-preview">
+            <h2>Quem Sou</h2>
+            <p>Sou Cleusia Brito, apaixonada pelo meu trabalho e empenhada em entregar sempre o melhor. 
+            Neste site, poderá conhecer os meus serviços, portfólio e como entrar em contacto.</p>
+            <a href="sobre.html" class="btn-secondary">Ler Mais</a>
+        </section>
+
+        <section class="services-preview">
+            <h2>O que ofereço</h2>
+            <ul>
+                <li>Consultoria personalizada</li>
+                <li>Desenvolvimento de projetos</li>
+                <li>Apoio e suporte contínuo</li>
+            </ul>
+            <a href="servicos.html" class="btn-secondary">Ver Serviços</a>
+        </section>
+
+        <section class="call-to-action">
+            <h2>Está pronta para avançar?</h2>
+            <p>Entre em contacto hoje mesmo para uma consulta gratuita.</p>
+            <a href="contactos.html" class="btn-primary">Contactar</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Cleusia Brito. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
 <head>
   <meta charset="UTF-8">
   <title>Início | Cleúsia</title>
@@ -15,7 +73,7 @@
   </nav>
   <main>
     <h2>Olá!</h2>
-    <p>Este é o site oficial da Cleúsia. Aqui partilhamos informações, fotos e formas de contacto.</p>
+<img src="imagens/IMG-20250625-WA0003.jpg" alt="Imagem WhatsApp" style="max-width:100%; height:auto;" />    <p>Este é o site oficial da Cleúsia. Aqui partilhamos informações, fotos e formas de contacto.</p>
   </main>
   <footer>© 2025 Cleúsia - Todos os direitos reservados</footer>
 </body>
